fixed blurryness by removing transform: translate

--- a/CSS/site.css
+++ b/CSS/site.css
@@ -2,14 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .container{    
     position: fixed;
-    top: 40%;
-    left: 45%;  
-    transform: translate(-50%, -50%);
+    top: 10%;
+    left: 25%;    
     text-align: center;
     background: linear-gradient(red, yellow); 
     margin: 5%;
